...
      Area(
        flex: 1,
        builder:
            (context, area) => RepaintBoundary(
              child: PdfPageArea(
                controller: _viewModel.controller,
                key: const ValueKey('pdf_page_area'),
                pageSize: _pageSize,
                onDocumentChanged: widget.onDocumentChanged,
              ),
            ),
      ),
      Area(
...
